--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 .Loader{
   text-align: center;
+  background-color: #4169e1;
   display: flex;
   justify-content: center;
   align-items: center;
